# hackday-logo-painter

./: README.md
hack_bot/logo_painter/: CMakeLists.txt  package.xml
hack_bot/logo_painter/launch/: hack.launch
hack_bot/logo_painter/scripts/: cp_logo_parse.py  logo_mission.yaml
hack_bot/logo_painter/src/: hack_relay.ino  start_painting.py  stop_painting.py  test_node.py
