<?xml version="1.0"?>
<package format="2">
  <name>logo_painter</name>
  <version>0.0.0</version>
  <description>The logo_painter hack</description>

  <maintainer email="lazzalini@clearpathrobotics.com">lazzalini</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
